Version 6.6.0
- Implemented proper boolean type for C
- Fixed -- operator for floats

Version 6.5.4
- Minor optimization improvement (and major documentation improvements) courtesy of Ada

Version 6.5.3
- Fixed an incorrect relocation check that caused spurious internal errors
- Implemented NAN() method for Spin2
- Implemented rename for host (9P) file system
- Improved error message for objects that are not found
- Reduced likelihood of duplicate function definitions in sub-objects

Version 6.5.2
- Really added BASIC date/time functions (inadvertently not checked in)
- Fixed *scanf() for floating point values
- Fixed a problem parsing attributes attached to static functions.

Version 6.5.1
- Changed some warnings about unused wcz flags into errors (when the corresponding instruction requires the flags)
- Fixed some problems with line numbers in errors & warnings after #include
- Fixed a potential bug with fcaching of loops with a branch between them (thanks to Ada)
- Fixed array access in ORG code in nu output
- Improved some error messages
- Various portability improvements for the source code itself

Version 6.5.0
- Added MKDIR function for BASIC
- Added support for NeoYume style ARGv parameters in C
- Added execl() function in C
- Added DATE$, TIME$, and SETTIME functions to BASIC
- Added rewind() function in C
- Allow arguments to be passed in the BASIC CHAIN function
- Fixed `-x` option in flexcc
- Fixed interaction between Parallax FS and stdio FILEs when multiple FILEs are open
- Fixed missing mbrtowc implementation
- Fixed overly agressive type checking on BASIC CPU() for asm code
- Fixed Spin2 issue with variables named `result` in void functions
- Implemented new Spin2 REPEAT n : i syntax (thanks, Ada!), and later added REPEAT n WITH i variant
- Keep a small FCACHE even in -O0, to allow ORG to function as expected
- Made _geterror() clear the error number
- Allow & operator for string concatenation in BASIC
- Re-factored some code to reduce bloat a bit