@@ -17,3 +17,6 @@ closed handle
 0.8000
 0.9000
 1.0000
+0 : a, b = 	0	-1
+1 : a, b = 	-1	0
+2 : a, b = 	-1	-1
