@@ -2415,7 +2415,7 @@ basetypename:
   | BAS_INTEGER_KW
     { $$ = ast_type_long; }
   | BAS_BOOLEAN
-    { $$ = ast_type_long; }
+    { $$ = ast_type_basic_boolean; }
   | BAS_UINTEGER
     { $$ = ast_type_unsigned_long; }
   | BAS_SINGLE
